<resources>
    <string name="app_name">Desafio 2DSM</string>
    <string name="ya_posees_una_cuenta">¿Ya posees una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">REGISTRAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="portalmedico">PortalMedico</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="autenticar">AUTENTICAR</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="menu_principal">menu principal</string>
    <string name="carrito">Carrito</string>
    <string name="items_en_el_carrito">Items en el carrito</string>
    <string name="nombre">Nombre</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="titulo">Título</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="historial_compras">historial de compras</string>
</resources>